Overwrite index with portfolio content

--- a/index.html
+++ b/index.html
@@ -3,15 +3,377 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=portfolio_thiago_figueiredo.html">
-    <title>Redirecionando...</title>
-    <script>
-        window.location.href = "portfolio_thiago_figueiredo.html";
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio - Thiago Henrique de Oliveira Figueiredo</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 850px;
+            margin: 0 auto;
+            padding: 40px;
+            background-color: #fff;
+        }
+
+        h1 {
+            color: #0b5ed7;
+            /* Corporate Blue */
+            margin-bottom: 5px;
+            font-size: 28px;
+            border-bottom: 2px solid #0b5ed7;
+            padding-bottom: 10px;
+        }
+
+        h2 {
+            color: #1a1a1a;
+            font-size: 20px;
+            margin-top: 30px;
+            margin-bottom: 15px;
+            border-left: 5px solid #0b5ed7;
+            padding-left: 10px;
+            background-color: #f8f9fa;
+            padding-top: 5px;
+            padding-bottom: 5px;
+        }
+
+        h3 {
+            color: #444;
+            font-size: 18px;
+            margin-top: 25px;
+            margin-bottom: 10px;
+        }
+
+        h4 {
+            color: #555;
+            font-size: 16px;
+            margin-top: 20px;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        .subtitle {
+            font-size: 18px;
+            color: #555;
+            margin-top: 0;
+            margin-bottom: 30px;
+            font-weight: normal;
+        }
+
+        p {
+            margin-bottom: 15px;
+            text-align: justify;
+        }
+
+        ul {
+            margin-bottom: 15px;
+            padding-left: 20px;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        strong {
+            color: #000;
+        }
+
+        .case-study {
+            background-color: #fcfcfc;
+            border: 1px solid #eee;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 4px;
+        }
+
+        .case-title {
+            color: #0b5ed7;
+            font-weight: bold;
+            font-size: 18px;
+            margin-bottom: 10px;
+            display: block;
+        }
+
+        .contact-info {
+            background-color: #e9ecef;
+            padding: 20px;
+            border-radius: 4px;
+            margin-top: 40px;
+        }
+
+        .print-btn {
+            display: block;
+            margin-bottom: 20px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 4px;
+            font-weight: bold;
+            width: fit-content;
+        }
+
+        @media print {
+            .print-btn {
+                display: none;
+            }
+
+            body {
+                padding: 0;
+                max-width: 100%;
+            }
+
+            .case-study {
+                break-inside: avoid;
+                border: 1px solid #ddd;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <p>Se você não for redirecionado automaticamente, <a href="portfolio_thiago_figueiredo.html">clique aqui</a>.</p>
+
+    <a href="javascript:window.print()" class="print-btn">Imprimir como PDF</a>
+
+    <h1>Thiago Henrique de Oliveira Figueiredo</h1>
+    <div class="subtitle">Profissional Técnico em Dados e Integrações | Tasy & Oracle</div>
+
+    <h2>Apresentação e Proposta de Valor</h2>
+
+    <p>Atuo como profissional técnico com foco em dados e processos no ambiente <strong>Philips Tasy</strong>, com
+        vivência prática em projeto de implantação e sustentação em operadora de saúde (Unimed).</p>
+
+    <p>Tenho experiência desde o entendimento técnico das demandas de negócio até a execução de scripts, cargas de
+        dados, validações e documentação, atuando de forma integrada com analistas funcionais, times internos e
+        fornecedores.</p>
+
+    <p>Minha atuação é pautada pelo cumprimento da governança, prazos e padrões do projeto, buscando sempre consistência
+        técnica e clareza na comunicação.</p>
+
+    <p><strong>Diferenciais:</strong></p>
+    <ul>
+        <li><strong>Experiência Técnica:</strong> Uso recorrente de PL/SQL para apoio a rotinas de implantação e
+            sustentação.</li>
+        <li><strong>Vivência Tasy:</strong> Atuação focada em módulos e processos específicos, com familiaridade nas
+            estruturas de dados do dia a dia.</li>
+        <li><strong>Perfil Colaborativo:</strong> Trabalho conjunto com equipes internas, facilitando a comunicação
+            técnica.</li>
+    </ul>
+
+    <h2>Principais Competências</h2>
+
+    <h3>Dados e Banco de Dados (Oracle)</h3>
+    <ul>
+        <li><strong>SQL e Manipulação de Dados:</strong> Desenvolvimento de queries para análise, extração e correção de
+            dados.</li>
+        <li><strong>PL/SQL:</strong> Criação e manutenção de Procedures, Functions, Packages, Triggers e Jobs para
+            automação de rotinas.</li>
+        <li><strong>Modelagem e Estrutura:</strong> Análise de tabelas e apoio na manutenção da integridade da base de
+            dados.</li>
+    </ul>
+
+    <h3>Implantação e Integração (Tasy)</h3>
+    <ul>
+        <li><strong>Apoio em Migração de Dados:</strong> Execução de scripts de limpeza e padronização para cargas de
+            dados.</li>
+        <li><strong>Integrações:</strong> Validação técnica de interfaces e apoio no acompanhamento de trocas de
+            arquivos (XML/Layouts).</li>
+        <li><strong>Setup:</strong> Apoio pontual na configuração técnica de parâmetros e customizações, sempre sob
+            orientação funcional.</li>
+    </ul>
+
+    <h3>Relatórios e Análises</h3>
+    <ul>
+        <li><strong>Extração de Dados:</strong> Criação de queries para suporte à tomada de decisão gerencial e
+            operacional.</li>
+        <li><strong>Suporte a Relatórios:</strong> Preparação e saneamento de bases para construção de indicadores e
+            relatórios operacionais.</li>
+    </ul>
+
+    <h3>Documentação e Processos</h3>
+    <ul>
+        <li><strong>Levantamento de Requisitos:</strong> Especificação técnica e funcional de novas demandas.</li>
+        <li><strong>Documentação Técnica:</strong> Elaboração de roteiros, dicionários de dados simples e registros de
+            procedimentos realizados.</li>
+    </ul>
+
+    <h2>Experiências e Cases Relevantes</h2>
+
+    <div class="case-study">
+        <span class="case-title">Case 1: Implantação Philips Tasy – Migração de Dados de Sistema Legado
+            (Unimed)</span>
+        <p><strong>Contexto:</strong><br>
+            Projeto de implantação do Philips Tasy envolvendo a migração de grandes volumes de dados provenientes de
+            sistemas legados, com diferenças estruturais, regras de negócio distintas e necessidade de alta
+            confiabilidade para início da operação.</p>
+
+        <p><strong>Atuação:</strong></p>
+        <ul>
+            <li>Participação <strong>ativa e contínua</strong> nas frentes de migração de dados durante o projeto de
+                implantação do Tasy.
+            </li>
+            <li><strong>Participação técnica</strong> no mapeamento DE-PARA entre estruturas do sistema legado e o
+                modelo de dados do Tasy.</li>
+            <li><strong>Análise das tabelas</strong>, chaves e relacionamentos envolvidos nos processos de migração.
+            </li>
+            <li><strong>Desenvolvimento de scripts SQL e PL/SQL</strong> para:
+                <ul>
+                    <li>saneamento de dados inconsistentes,</li>
+                    <li>padronização de formatos,</li>
+                    <li>validação de integridade referencial antes da carga.</li>
+                </ul>
+            </li>
+            <li><strong>Desenvolvimento e Preparação das cargas</strong>, execução controlada em ambientes de teste e
+                homologação
+                e conferência dos dados pós-importação.</li>
+            <li><strong>Suporte técnico</strong> durante ciclos de teste e na fase de virada de sistema (go-live),
+                atuando na identificação e correção rápida de inconsistências.</li>
+        </ul>
+
+        <p><strong>Impacto:</strong><br>
+            Contribuição direta para a realização das cargas de dados de forma consistente e segura, reduzindo riscos na
+            virada do sistema e garantindo a disponibilidade de informações confiáveis no Tasy desde o início da
+            operação.</p>
+    </div>
+
+    <div class="case-study">
+        <span class="case-title">Case 2: Automação e Envio de Eventos do eSocial após Virada para o Tasy</span>
+        <p><strong>Contexto:</strong><br>
+            Após a virada do sistema para o Philips Tasy, a geração e o envio dos eventos do eSocial (S-1200, S-1210 e
+            S-2300) deixaram de ser realizados devido a limitações na integração nativa entre Tasy e Senior. A situação
+            gerou meses de atraso no envio dos eventos, com impacto regulatório e dependência de orçamentos elevados
+            para customização da integração oficial.</p>
+
+        <p><strong>Atuação:</strong></p>
+        <ul>
+            <li><strong>Engenharia de Dados (Oracle / PL/SQL):</strong>
+                <ul>
+                    <li>Desenvolvimento de procedures e scripts SQL para extração dos dados diretamente das tabelas do
+                        Tasy (folha, prestadores e cooperados).</li>
+                    <li>Tratamento, padronização e formatação dos dados conforme os layouts oficiais do eSocial.</li>
+                    <li>Implementação de validações de obrigatoriedade e consistência antes da geração dos eventos.</li>
+                </ul>
+            </li>
+            <li><strong>Solução de Integração Customizada:</strong>
+                <ul>
+                    <li>Criação de uma aplicação em Python para consumir as procedures, orquestrar os dados e gerar os
+                        XMLs do eSocial.</li>
+                    <li>Desenvolvimento de interface em React para permitir:
+                        <ul>
+                            <li>acompanhamento dos envios,</li>
+                            <li>visualização e tratamento de erros,</li>
+                            <li>validação de dados obrigatórios,</li>
+                            <li>geração e download de arquivos por lote.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li><strong>Conformidade e Controle:</strong>
+                <ul>
+                    <li>Validação estrutural dos XMLs (XSD).</li>
+                    <li>Implementação de mecanismos para rastreabilidade dos eventos enviados, rejeitados ou pendentes.
+                    </li>
+                </ul>
+            </li>
+        </ul>
+
+        <p><strong>Impacto:</strong><br>
+            Restabelecimento do envio do eSocial após a virada para o Tasy, eliminação do processo manual, redução do
+            risco regulatório e criação de uma solução interna funcional enquanto a integração oficial não era viável.
+        </p>
+    </div>
+
+    <div class="case-study">
+        <span class="case-title">Case 3: Automação do Fluxo de Requisições OPME no Tasy para Ordens de Serviços</span>
+        <p><strong>Contexto:</strong><br>
+            Processo manual e fragmentado para tratamento de requisições de OPME, gerando retrabalho e atrasos na
+            criação de Ordens de Serviço no sistema.</p>
+
+        <p><strong>Atuação:</strong></p>
+        <ul>
+            <li>Apoio técnico na definição do fluxo de dados do processo.</li>
+            <li>Desenvolvimento de rotinas em <strong>PL/SQL</strong> para automatizar etapas do pipeline.</li>
+            <li>Automatização do cadastro das requisições e geração de OS conforme regras pré-definidas.</li>
+            <li>Validação técnica dos resultados junto às áreas envolvidas.</li>
+        </ul>
+
+        <p><strong>Impacto:</strong><br>
+            Redução de atividades manuais, maior padronização do processo e melhoria no tempo de resposta operacional.
+        </p>
+    </div>
+
+    <div class="case-study">
+        <span class="case-title">Case 4: Desenvolvimento de Relatórios Operacionais e Gerenciais Avançados no
+            Tasy</span>
+        <p><strong>Contexto:</strong><br>
+            Necessidade contínua de relatórios confiáveis e performáticos para suportar as áreas assistencial,
+            auditoria, financeira e gestão médica, envolvendo regras de negócio complexas e grandes volumes de dados no
+            Tasy.</p>
+
+        <p><strong>Atuação:</strong></p>
+        <ul>
+            <li><strong>Desenvolvimento de queries SQL complexas</strong> para extração e consolidação de dados a partir
+                de múltiplas tabelas do Tasy.</li>
+            <li><strong>Criação de procedures em PL/SQL</strong> para aplicação de regras de negócio, cálculos e
+                tratamentos necessários à geração dos relatórios.</li>
+            <li><strong>Estruturação de packages</strong> para centralizar regras, padronizar consultas e facilitar
+                manutenção e evolução dos relatórios.</li>
+            <li><strong>Implementação de jobs automatizados</strong> para execução recorrente, geração de dados
+                consolidados e suporte a relatórios dinâmicos e parametrizáveis.</li>
+            <li><strong>Validação técnica dos resultados</strong> junto às áreas solicitantes, com ajustes conforme
+                regras operacionais e assistenciais.</li>
+        </ul>
+
+        <p><strong>Impacto:</strong><br>
+            Relatórios mais confiáveis, performáticos e alinhados às regras de negócio, redução de extrações manuais e
+            maior autonomia das áreas no acesso às informações.</p>
+    </div>
+
+    <div class="case-study">
+        <span class="case-title">Case 5: Documentação Técnica e Apoio à Comunicação entre Negócio e TI</span>
+        <p><strong>Contexto:</strong><br>
+            Demandas evolutivas no Tasy apresentavam divergências de entendimento entre regras de negócio e a forma como
+            os dados eram persistidos e extraídos no banco Oracle, gerando retrabalho em relatórios e ajustes técnicos.
+        </p>
+
+        <p><strong>Atuação:</strong></p>
+        <ul>
+            <li><strong>Análise direta</strong> das tabelas, relacionamentos e campos envolvidos em cada demanda.</li>
+            <li><strong>Criação de queries SQL</strong> para validar regras de negócio, identificar inconsistências e
+                exemplificar cenários reais de dados.</li>
+            <li><strong>Documentação objetiva</strong> com:
+                <ul>
+                    <li>tabelas e campos utilizados,</li>
+                    <li>regras de cálculo aplicadas,</li>
+                    <li>consultas SQL de apoio para conferência e validação.</li>
+                </ul>
+            </li>
+            <li><strong>Registro dos scripts e ajustes executados</strong> para facilitar reutilização e suporte futuro.
+            </li>
+        </ul>
+
+        <p><strong>Impacto:</strong><br>
+            Redução de ambiguidades técnicas, menor retrabalho em ajustes e maior agilidade na validação das entregas.
+        </p>
+    </div>
+
+    <h2>Modelo de Atuação</h2>
+    <ul>
+        <li><strong>Regime:</strong> Prestação de Serviços (PJ).</li>
+        <li><strong>Disponibilidade:</strong> Remota.</li>
+    </ul>
+
+    <div class="contact-info">
+        <h2>Contato</h2>
+        <p>Estou à disposição para detalhar tecnicamente estes cases e discutir como posso apoiar os desafios de
+            implantação na Philips.</p>
+        <ul>
+            <li><strong>Nome:</strong> Thiago Henrique de Oliveira Figueiredo</li>
+            <li><strong>E-mail:</strong> thof@ic.ufal.br</li>
+        </ul>
+    </div>
+
 </body>
 
 </html>
